chore: kakaoMap API 패키지 설치 및 초기 설정

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=39eec2ee010f35e10d0da2a7be8545ed&libraries=services,clusterer"
+    ></script>
   </body>
 </html>
